[package]
name = "leftgang"
version = "0.1.0"
authors = ["Matthew Witman <mnwranger@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.2.5"
hyper = "0.13"
tokio = {version = "0.2.22", features = ["full"]}
serenity = { default-features = false, features = ["client", "gateway", "model", "rustls_backend", "framework", "standard_framework"], version = "0.9.0-rc.2"}